# collision_checker

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  package.xml
include/: collision_checker.h
launch/: collision_checker_node.launch
src/: collision_checker.cpp  main.cpp
srv/: Check.srv  SetConfig.srv
