<?xml version="1.0"?>
<package format="2">
  <name>collision_checker</name>
  <version>0.1.0</version>
  <description>collision_checker</description>

  <maintainer email="mizuno.naoki@rm.is.tohoku.ac.jp">Naoki Mizuno</maintainer>

  <license>MIT</license>

  <url type="website">https://github.com/naoki-mizuno/collision_checker</url>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <export>
  </export>
</package>
